// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getField for Form 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2ManyCheckBox-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="row"
  />
</div>
`;

exports[`getField for Form 2`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2ManyCheckBox-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="row"
  >
    <div
      className=""
    >
      <span>
        <input
          checked={true}
          disabled={undefined}
          onChange={[Function]}
          type="checkbox"
        />
        todo 1
      </span>
    </div>
    <div
      className=""
    >
      <span>
        <input
          checked={true}
          disabled={undefined}
          onChange={[Function]}
          type="checkbox"
        />
        todo 2
      </span>
    </div>
    <div
      className=""
    >
      <span>
        <input
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          type="checkbox"
        />
        todo 3
      </span>
    </div>
  </div>
</div>
`;

exports[`getField for Form readonly 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2ManyCheckBox-field-name-"
    style={Object {}}
  >
    Test
  </label>
  <div
    className="row"
  />
</div>
`;

exports[`getField for Form readonly 2`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2ManyCheckBox-field-name-"
    style={Object {}}
  >
    Test
  </label>
  <div
    className="row"
  >
    <div
      className=""
    >
      <span>
        <input
          checked={true}
          disabled={true}
          onChange={[Function]}
          type="checkbox"
        />
        todo 1
      </span>
    </div>
    <div
      className=""
    >
      <span>
        <input
          checked={true}
          disabled={true}
          onChange={[Function]}
          type="checkbox"
        />
        todo 2
      </span>
    </div>
    <div
      className=""
    >
      <span>
        <input
          checked={false}
          disabled={true}
          onChange={[Function]}
          type="checkbox"
        />
        todo 3
      </span>
    </div>
  </div>
</div>
`;

exports[`getField for Form with empty value 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2ManyCheckBox-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <div
    className="row"
  />
</div>
`;

exports[`getField for Form with empty value 2`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Many2ManyCheckBox-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <div
    className="row"
  >
    <div
      className=""
    >
      <span>
        <input
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          type="checkbox"
        />
        todo 1
      </span>
    </div>
    <div
      className=""
    >
      <span>
        <input
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          type="checkbox"
        />
        todo 2
      </span>
    </div>
    <div
      className=""
    >
      <span>
        <input
          checked={false}
          disabled={undefined}
          onChange={[Function]}
          type="checkbox"
        />
        todo 3
      </span>
    </div>
  </div>
</div>
`;
